[tool.poetry]
name = "homely-mqtt"
version = "0.1.0"
description = ""
authors = ["Morten Lied Johansen <mortenjo@ifi.uio.no>"]
license = "MIT"
packages = [{include = "ibidem"}]

[tool.poetry.dependencies]
python = "^3.11"
fiaas-logging = "^0.1.1"
fastapi = "^0.115.2"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
requests = "^2.32.3"
paho-mqtt = "^2"
pydantic-settings = "^2.6.0"
python-socketio = { version = "<6", extras = ["client"] }
pydantic = "^2.9.2"
python-slugify = "^8.0.4"

[tool.poetry.dev-dependencies]
pytest = "8.4.1"
pytest-cov = "6.2.1"
pytest-sugar = "1.0.0"
black = "25.1.0"
prospector = "1.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]
