[project]
name = "homely-mqtt"
description = ""
authors = [{ name = "Morten Lied Johansen", email = "mortenjo@ifi.uio.no" }]
requires-python = "==3.14.*"
license = "MIT"
dependencies = [
    "fiaas-logging>=0.1.1,<0.2",
    "fastapi>=0.129,<0.130",
    "uvicorn[standard]>=0.41,<0.42",
    "requests>=2.32.3,<3",
    "paho-mqtt>=2,<3",
    "pydantic-settings>=2.12,<3",
    "python-socketio[client]<6",
    "pydantic>=2.12,<3",
    "python-slugify>=8.0.4,<9",
]
dynamic = [
    "version",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-sugar==1.1.1",
]

[tool.hatch.build.targets.sdist]
include = ["ibidem"]

[tool.hatch.build.targets.wheel]
include = ["ibidem"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff]
line-length = 120
